--- a/rust-lang/example-app/rust/Cargo.toml
+++ b/rust-lang/example-app/rust/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "netstats"
 version = "0.1.0"
-authors = ["Mario Alexandro Santini <marioalexandro.santini@telecomitalia.it>"]
+authors = ["Mario Alexandro Santini <alexmario74@gmail.com>"]
 edition = "2018"
 
 [dependencies]
